--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,4 +12,6 @@ environment:
 dev_dependencies:
   lints: ^2.0.0
   test: ^1.16.0
-dependencies: {http: ^0.13.4}
+  build_runner: ^2.0.0
+
+dependencies: {http: ^0.13.4, json_serializable: ^6.3.1}
